<resources>
    <string name="app_name">인생 한방</string>
    <string name="splash_name" translatable="false">Splash Screen</string>
    <string name="action_settings">정보</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="qr_btn">당첨 확인</string>
    <string name="today_num_btn">오늘의 번호</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2778546304304506/4498970075</string>
    <string name="check_lotto_number">당첨 번호 확인</string>
    <string name="today_lotto_number">오늘의 추천 번호</string>
    <string name="today_lotto_spcial_number">특별 추첨 번호</string>
    <string name="not_yet_draw">아직 추첨되지 않은 로또 입니다.</string>
    <string name="wrong_qr_code" translatable="false">잘못된 QR 코드 입니다.</string>
    <string name="getting_lotto_number">로또 번호를 취합 중 입니다.</string>
    <string name="charge_btn">추첨 횟수 얻기</string>
    <string name="test_btn" translatable="false">TEST</string>
    <string name="drw">회</string>
    <string name="coWinner">당첨자 수</string>
    <string name="winAmnt">당첨 금액</string>
    <string name="unityAdsReady">특별 추첨 번호 도착</string>
    <string name="unityAdsWait">특별 추첨 번호 도착 예정</string>
    <string name="btn_close"> 닫 기</string>
    <string name="app_explain1">인생 한방은 로또 추첨기 입니다.</string>
    <string name="app_explain2">역대 당첨 번호와 데이터 분석을 통해 가장 가능성이 높은 추첨번호를 제공합니다.</string>
    <string name="app_explain3">인생 한방을 통해 인생 역전을 노려 보세요.</string>
    <string name="app_explain4">필요한 기능이 있으실 경우 개발자 메일로 의견을 보내주세요.</string>
    <string name="app_explain5">감사합니다.</string>
    <string name="winner_sell_place" translatable="false">등 판매 장소</string>
    <string name="win_place" translatable="false">당첨 판매점</string>
    <string name="store_place">판매점 조회</string>
    <string name="info">구입 안내</string>
    <string name="drw_desc" translatable="false">회 당첨번호</string>
    <string name="person" translatable="false">명</string>
    <string name="no_lotto_info_warning" translatable="false">정보를 얻어오지 못했습니다.</string>
    <string name="no_lotto_info_warning_desc" translatable="false">정보를 얻어오지 못했습니다. 다시 실행해 주세요.</string>
</resources>
