<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settiong_info_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/custom_window_background"
    android:orientation="vertical"
    android:padding="10sp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:id="@+id/setting_info_title"
            android:textColor="@color/navy"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/setting_info_linear"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:text="@string/app_explain1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textColor="@color/navy"
                android:textSize="20sp" />

            <TextView
                android:text="@string/app_explain2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textColor="@color/right_color"
                android:textSize="20sp" />

            <TextView
                android:text="@string/app_explain3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="@color/navy"
                android:textSize="20sp" />

            <TextView
                android:text="@string/app_explain4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textColor="@color/navy"
                android:textSize="20sp" />

            <TextView
                android:text="@string/app_explain5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textColor="@color/navy"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/setting_info_close_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="false"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/btn_close"
                android:background="@drawable/btn_selector"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/share_btn_selector"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/setting_info_share_btn"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>